cli/tests/snapshot/inputs/errors/destructuring_typecontract_fail.ncl
# capture = 'stderr'
# command = ['eval']
let {a | String} = {a=1} in
a
